add missing fields

--- a/langs/en_us/bot/textEvents.json
+++ b/langs/en_us/bot/textEvents.json
@@ -12,7 +12,10 @@
         "file": "file",
         "files": "files",
         "fileExpired": "file too large or expired",
-        "filesExpired": "files too large or expired"
+        "filesExpired": "files too large or expired",
+        "sticker": "[sticker]",
+        "noContent": "[no content]",
+        "thread": "Thread"
     },
     "messagesBulkDeleted": {
         "title": "Multiple Messages Deleted",
@@ -34,7 +37,8 @@
         "afterEdit": "After edit",
         "diff": "Diff",
         "cannotRetrieveOriginal": "*[Cannot retrieve original message]*",
-        "noContent": "[No content]"
+        "noContent": "[no content]",
+        "thread": "Thread"
     },
     "attachmentDeleted": {
         "title": "Attachment Deleted"
