--- a/langs/en_gb/bot/standard/textEvents.json
+++ b/langs/en_gb/bot/standard/textEvents.json
@@ -1,14 +1,14 @@
 {
     "polls":{
         "poll": "Poll",
-        "status": "Poll has {status}.",
+        "pollDescriptor":"[poll]",
+        "status": "Poll has status.",
         "ended": "ended",
         "notEnded": "not ended",
-        "multiselect": "Multiselect is {status}.",
+        "multiselect": "Multiselect",
         "enabled": "enabled",
         "disabled": "disabled",
         "ends": "Poll ends {time}.",
-        "noResults": "No results available.",
         "votes": "{number} votes",
         "notApplicable": "N/A"
     },
