--- a/langs/en_pr/bot/standard/voiceEvents.json
+++ b/langs/en_pr/bot/standard/voiceEvents.json
@@ -21,7 +21,7 @@
     },
     "voiceMove": {
         "title": "Ordered T' Move",
-        "description_moved": "{user} was ordered t' move from th' {channel_old} cabin to the {channel_new} cabin",
+        "description": "{user} was ordered t' move from th' {channel_old} cabin to the {channel_new} cabin",
         "movedBy": "Ordered by"
     },
     "voiceJoin": {
