--- a/langs/en_gb/bot/slash_commands/ban.json
+++ b/langs/en_gb/bot/slash_commands/ban.json
@@ -4,7 +4,7 @@
     
     "commandOptions": {
         "userOption": {
-            "name": "user",
+            "name": "user abc",
             "description": "The user to ban"
         },
 
