--- a/langs/en_us/bot/standard/channelEvents.json
+++ b/langs/en_us/bot/standard/channelEvents.json
@@ -12,5 +12,19 @@
     "channelUpdated": {
         "title": "Channel Modified",
         "description": "{channel} was modified by {executor}"
+    },
+    "channelOverwriteCreate": {
+        "title": "Channel Permissions Added",
+        "description": "{executor} added permissions to {channel} for {special}"
+    },
+    "channelOverwriteDelete": {
+        "title": "Channel Permissions Removed",
+        "description": "{executor} removed permissions from {channel} for {special}"
+    },
+    "channelOverwriteUpdate": {
+        "title": "Channel Permissions Updated",
+        "description": "{executor} updated permissions for {channel} for {special}",
+        "newPermissions": "New Permissions",
+        "viewFullNewPermissions": "View Full New Permissions"
     }
 }
