--- a/langs/en_pr/bot/standard/roleEvents.json
+++ b/langs/en_pr/bot/standard/roleEvents.json
@@ -1,15 +1,21 @@
 {
     "roleCreated": {
-        "title":"Role Created",
+        "title": "Role Created",
         "description": "{role} was created by {executor}"
     },
     "roleDeleted": {
-        "title":"Role Deleted",
+        "title": "Role Deleted",
         "description": "{role_name} was deleted by {executor}",
         "role": "Role"
     },
     "roleUpdated": {
-        "title":"Role Modified",
+        "title": "Role Modified",
         "description": "{role} was modified by {executor}"
+    },
+    "rolePermissionsUpdate": {
+        "title": "Role Permissions Updated",
+        "description": "Permissions for {role} were updated by {executor}",
+        "newPermissions": "New Permissions",
+        "viewFullNewPermissions": "View Full New Permissions"
     }
 }
