--- a/langs/en_gb/bot/standard/roleEvents.json
+++ b/langs/en_gb/bot/standard/roleEvents.json
@@ -16,6 +16,7 @@
         "title": "Role Permissions Updated",
         "description": "Permissions for {role} were updated by {executor}",
         "newPermissions": "New Permissions",
-        "viewFullNewPermissions": "View Full New Permissions"
+        "viewFullNewPermissions": "View Full New Permissions",
+        "viewFullOldPermissions": "View Full Old Permissions"
     }
 }
