--- a/langs/tr/bot/standard/textEvents.json
+++ b/langs/tr/bot/standard/textEvents.json
@@ -49,7 +49,8 @@
         "channel": "Kanal",
         "jumpToMessage": "Mesaja atla",
         "afterEdit": "Düzenlemeden sonra",
-        "diff": "Diff",
+        "diff": "Edits",
+        "diffError": "Unable to calculate edits.",
         "cannotRetrieveOriginal": "Orijinal mesaj alınamıyore",
         "noContent": "no content",
         "thread": "Thread"
